<resources>
    <string name="app_name">Online Shop</string>
    <string name="app_logo"> </string>
    <string name="app_slogan"> Donate your undesirable clothes or discover new ones for free! </string>
    <string name="main_login_button"> Already have an account? Please Log in</string>
    <string name="main_register_button">Join Now</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="users_order">Users order</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="maintain_product">Maintain Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="close">close</string>
    <string name="update">update</string>
    <string name="next">Next</string>
    <string name="your_name">Your name</string>
    <string name="your_address">Your address</string>
    <string name="your_city">Your city</string>
    <string name="confirm">Confirm</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="shipment_details">Please write your Shipment Details</string>
    <string name="check_orders">Check Orders</string>
    <string name="date_time">Date Time</string>
    <string name="order_products">Show order products</string>
    <string name="congrats">Congratulations, your order has been placed successfully. You will receive your order at your door step soon!</string>
    <string name="cart">Your Cart</string>
    <string name="product_shipping">Product Shipping</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="change_profile">Change profile</string>
    <string name="phone_number">Phone number</string>
    <string name="full_name">Full name</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="shipping_cost">Shipping cost</string>
    <string name="add_product">Add product</string>
    <string name="product_address">Product address</string>
    <string name="recover_password">Forgot Password?</string>
    <string name="client_login">Client Login</string>
    <string name="create_giveawayer">Proceed to register as a Giveawayer!</string>
    <string name="register_button">Click here to register!</string>
    <string name="create_client">Proceed to register as a Client!</string>
    <string name="username">Username</string>
    <string name="logout">Log out</string>
    <string name="seller_panel">Im a Giveawayer!</string>
    <string name="client_panel">Im a Client!</string>
    <string name="linear_layout_1"> </string>
    <string name="user_profile_name">Username</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
