<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart.ConfirmFinalOrderActivity">

    <TextView
        android:id="@+id/shipment_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/shipment_details"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shipment_details"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/your_name" />

    <EditText
        android:id="@+id/your_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/your_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/your_phone_number" />

    <EditText
        android:id="@+id/your_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/your_phone_number"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/your_address" />

    <EditText
        android:id="@+id/your_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/your_address"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/your_city" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/yellowGreen"
        android:layout_alignParentBottom="true" />
</RelativeLayout>