<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/yellowGreen">

        <TextView
            android:id="@+id/your_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/your_phone_number"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/your_phone_number"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:layout_marginEnd="5dp"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/your_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/your_city"
            android:layout_below="@id/your_phone_number"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textSize="17sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/your_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/your_address"
            android:layout_below="@id/your_city"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textSize="17sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/date_time"
            android:layout_below="@id/your_address"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textSize="17sp"
            android:gravity="center" />

        <Button
            android:id="@+id/order_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_time"
            android:layout_margin="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/order_products"
            android:background="@android:color/white" />
    </RelativeLayout>
</RelativeLayout>