<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:id="@+id/maintain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter" />

        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_image"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway"
            android:hint="@string/product_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_name"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/raleway"
            android:hint="@string/shipping_cost"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_price"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway"
            android:hint="@string/product_description"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/product_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_description"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway"
            android:hint="@string/product_address"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/apply_changes_maintain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_address"
            android:background="@color/yellowGreen"
            android:text="@string/apply_changes"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/delete_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/apply_changes_maintain"
            android:background="@color/yellowGreen"
            android:text="@string/delete_product"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</android.support.v7.widget.CardView>