<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    tools:context=".Cart.CartActivity">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/your_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cart"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/congrats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/congrats"
        android:textSize="18sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cart_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative"
        android:layout_above="@id/next">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/yellowGreen"
        android:text="@string/next" />


</RelativeLayout>
