<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/yellowGreen">

        <TextView
            android:id="@+id/cart_product_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/cart_product_address"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/product_address"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:layout_marginEnd="5dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cart_product_shipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/product_shipping"
            android:layout_below="@id/cart_product_name"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textSize="14sp"
            android:gravity="center" />
    </RelativeLayout>

</android.support.v7.widget.CardView>