<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/closet_with_clothes"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="@font/raleway"
        android:text="@string/app_slogan"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:src="@drawable/applogo" />

    <Button
        android:id="@+id/main_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_design"
        android:fontFamily="@font/raleway"
        android:padding="10dp"
        android:text="@string/main_login_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/main_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_login_button"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_design"
        android:fontFamily="@font/raleway"
        android:padding="10dp"
        android:text="@string/main_register_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15sp" />
</RelativeLayout>